.local/share/xmobar/primary.errors

primary.hs:7:1: warning: [-Wtabs]
    Tab character found here.
    Please use spaces instead.
  |
7 |         alpha=204,
  | ^^^^^^^^

primary.hs:13:19: error:
    lexical error in string/character literal at character '\62959'
   |
13 |         Run Date "  %d %b %Y %H:%M " "date" 600,
   |                   ^
